--- a/app/src/main/res/layout/activity_details_donor.xml
+++ b/app/src/main/res/layout/activity_details_donor.xml
@@ -70,9 +70,28 @@
         android:id="@+id/txt_address"
         android:layout_width="280dp"
         android:layout_height="50dp"
+        android:layout_marginTop="9dp"
         android:background="@drawable/custominput"
         android:ems="10"
         android:hint=" Address"
+        android:inputType="text"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="#ACACAC"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_name" />
+
+    <EditText
+        android:id="@+id/txt_name"
+        android:layout_width="280dp"
+        android:layout_height="50dp"
+        android:background="@drawable/custominput"
+        android:ems="10"
+        android:hint=" Full name"
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
