--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -185,6 +185,10 @@
         android:textColor="@color/black"
         android:textColorHint="#ACACAC"
         android:textSize="14sp"
+        android:drawableRight="@drawable/visibility_off_icon"
+        android:drawableTint="#ACACAC"
+        android:paddingRight="18dp"
+        android:longClickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -214,19 +218,6 @@
         app:layout_constraintTop_toBottomOf="@+id/useother"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/icontwitter" />
-
-    <TextView
-        android:id="@+id/togglepassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:text="Show"
-        android:textColor="@color/gray"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_password"
-        app:layout_constraintEnd_toEndOf="@+id/txt_password"
-        app:layout_constraintTop_toTopOf="@+id/txt_password" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
