--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -136,6 +136,10 @@
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="#ACACAC"
+        android:drawableRight="@drawable/visibility_off_icon"
+        android:drawableTint="#ACACAC"
+        android:paddingRight="18dp"
+        android:longClickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -156,6 +160,10 @@
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="#ACACAC"
+        android:drawableRight="@drawable/visibility_off_icon"
+        android:drawableTint="#ACACAC"
+        android:paddingRight="18dp"
+        android:longClickable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -253,31 +261,6 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         app:srcCompat="@drawable/icontwitter" />
 
-    <TextView
-        android:id="@+id/togglepassword1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:text="Show"
-        android:textColor="@color/gray"
-        android:textStyle="bold"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/Password"
-        app:layout_constraintEnd_toEndOf="@+id/Password"
-        app:layout_constraintTop_toTopOf="@+id/Password" />
-
-    <TextView
-        android:id="@+id/togglepassword2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:text="Show"
-        android:textColor="@color/gray"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/confirm_Password"
-        app:layout_constraintEnd_toEndOf="@+id/confirm_Password"
-        app:layout_constraintTop_toTopOf="@+id/confirm_Password" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
