--- a/app/src/main/res/layout/activity_details_patient.xml
+++ b/app/src/main/res/layout/activity_details_patient.xml
@@ -100,6 +100,7 @@
         android:layout_marginTop="25dp"
         android:background="@drawable/custom_button"
         android:text="@string/sub"
+        android:textAllCaps="false"
         android:textColor="@color/color3"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
