--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -87,6 +87,7 @@
             android:layout_marginBottom="50dp"
             android:background="@drawable/custom_button"
             android:text="@string/submit"
+            android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -101,7 +102,7 @@
             android:layout_height="170dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/linear_feedback"
-            android:hint="Your Feedback"
+            android:hint="@string/feedback"
             android:inputType="textMultiLine"
             android:gravity="start|top"
             android:paddingStart="10dp"
@@ -109,7 +110,7 @@
             android:paddingEnd="10dp"
             android:textColor="@color/black"
             android:textColorHint="#ACACAC"
-            android:textSize="14sp"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
