--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -63,7 +63,7 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirm_Password" />
@@ -171,13 +171,13 @@
 
     <TextView
         android:id="@+id/txt_sign_up"
-        android:layout_width="189dp"
+        android:layout_width="wrap_content"
         android:layout_height="28dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:backgroundTintMode="add"
         android:text="Already have an account ?"
         android:textColor="#ACACAC"
-        android:textSize="16sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.391"
         app:layout_constraintStart_toStartOf="parent"
@@ -185,13 +185,14 @@
 
     <TextView
         android:id="@+id/Sign_in"
-        android:layout_width="91dp"
+        android:layout_width="wrap_content"
         android:layout_height="26dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
         android:backgroundTintMode="add"
         android:text="Sign in"
         android:textColor="@color/color2"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/txt_sign_up"
