--- a/app/src/main/res/layout/activity_doctors.xml
+++ b/app/src/main/res/layout/activity_doctors.xml
@@ -297,6 +297,7 @@ Nephrologist specialized in Adult ..."
         tools:ignore="SpeakableTextPresentCheck" />
 
     <RelativeLayout
+        android:id="@+id/relative6"
         android:layout_width="match_parent"
         android:layout_height="122dp"
         android:layout_below="@+id/relative5"
@@ -306,6 +307,43 @@ Nephrologist specialized in Adult ..."
         android:layout_marginBottom="25dp"
         android:background="@drawable/linear_feedback">
 
+        <ImageView
+            android:id="@+id/doctor6"
+            android:layout_width="128dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="0dp"
+            android:transitionName="imagetransaction6"
+            app:srcCompat="@drawable/doc6" />
+
+        <TextView
+            android:id="@+id/nam_doc6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="20dp"
+            android:text="Dr. Mohamed Deif"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:transitionName="nametransaction6" />
+
+        <TextView
+            android:id="@+id/des6"
+            android:layout_width="259dp"
+            android:layout_height="63dp"
+            android:layout_below="@+id/nam_doc6"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="6dp"
+            android:layout_toStartOf="@+id/doctor6"
+            android:text="Consultant of Nephrology, Cardiology and Internal Medicine ..."
+            android:textColor="@color/gray"
+            android:textSize="14sp"
+            android:transitionName="desctransaction6" />
     </RelativeLayout>
 
 </RelativeLayout>
