--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,7 @@
         android:layout_marginEnd="28dp"
         android:text="@string/textviewlog"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView11"
@@ -103,7 +103,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/textviewlog2"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView12"
@@ -118,7 +118,7 @@
         android:layout_marginBottom="44dp"
         android:text="@string/textviewlog3"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/txt_email"
