--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,7 @@
         android:layout_marginTop="45dp"
         android:fontFamily="sans-serif"
         android:text="Join"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textSize="60sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -229,7 +229,7 @@
         android:layout_marginTop="117dp"
         android:fontFamily="sans-serif"
         android:text="Us"
-        android:textColor="@color/black"
+        android:textColor = "?android:textColorPrimary"
         android:textSize="60sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
