--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -93,11 +93,11 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView13"
+            app:layout_constraintTop_toBottomOf="@+id/txt_feedback"
             app:layout_constraintVertical_bias="1.0" />
 
         <EditText
-            android:id="@+id/textView13"
+            android:id="@+id/txt_feedback"
             android:layout_width="300dp"
             android:layout_height="170dp"
             android:layout_marginTop="24dp"
